--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.show_sql=true
 
 security.jwt.expiracao=30
 security.jwt.chave-assinatura=TyBww6Fzc2FybyDDqSBhenVs
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
