--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/vendas?useTimezone=true&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-
-security.jwt.expiracao=30
-security.jwt.chave-assinatura=TyBww6Fzc2FybyDDqSBhenVs
-
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.profiles.active=dev
